--- a/GegaGamez.WebUI/Pages/Collections/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Collections/Index.cshtml
@@ -2,3 +2,38 @@
 @model GegaGamez.WebUI.Pages.Collections.IndexModel
 @{
 }
+<section id="collection-full-info">
+    <header id="collection-header" class="border-primary">
+        <a class="go-back-arrow" onclick="history.go(-1);"><i class="fa-solid fa-arrow-left font-primary"></i></a>
+        <h2 id="collection-name" class="font-contrast">Collection name</h2>
+    </header>
+</section>
+<article class="flex-container game-item">
+    <img class="img-standard game-img hover-shadow" src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/MassEffect_Xbox.jpg/261px-MassEffect_Xbox.jpg" alt="Alternate Text" />
+
+    <div class="text-info-block">
+        <h3 class="game-title-small">Mass Effect</h3>
+
+        <span class="rating-small">
+            8/10
+        </span>
+
+        <span class="font-secondary">
+            2006, Developer
+        </span>
+
+        <!--<span class="font-secondary">-->
+        <!--<a>Developer</a>-->
+        <!--Developer
+        </span>-->
+
+        <span class="game-description-small">
+            A small description. This fight will be your last!
+        </span>
+    </div>
+
+    <div class="btn-group game-action-buttons">
+        <button class="btn-contrast rounded">Move to</button>
+        <button class="btn-contrast rounded">Remove</button>
+    </div>
+</article>
