--- a/GegaGamez.WebUI/Pages/Users/Index.cshtml
+++ b/GegaGamez.WebUI/Pages/Users/Index.cshtml
@@ -1,6 +1,152 @@
-﻿@page "{id:int}"
-@model             IndexModel
+﻿@page
+@model IndexModel
 @{
 	
 }
-<h1>@Model.Id</h1>
+<article id="user-profile">
+    <img id="user-avatar-big" class="img-standard circle border-primary" src="images/alice.png" alt="User image" />
+    <div id="info-and-buttons-container" class="flex-container">
+        <section id="user-text-info" class="text-info-block">
+            <h2>
+                @@username
+            </h2>
+
+            <span class="font-secondary">
+                Country
+            </span>
+
+            <span>
+                Name: Amadeus
+            </span>
+
+            <span>
+                About me..... hello this is great
+            </span>
+        </section>
+
+        <section id="profile-buttons" class="btn-group">
+            <button type="button" class="btn-contrast rounded">Edit profile</button>
+        </section>
+    </div>
+
+    <section id="default-collections-section" class="">
+        <h2>Default Collections</h2>
+
+
+        @foreach(var defaultCollection in Model.DefaultCollections)
+        {
+            // rendeer collection
+        }
+
+        <div class="collections-container">
+            <div class="game-collection-item default-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Planned</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+            <div class="game-collection-item default-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Playing</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+
+            <div class="game-collection-item default-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Finished</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+
+            <div class="game-collection-item default-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Dropped</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+        </div>
+    </section>
+
+    <section id="user-collections-section">
+        <h2>Custom Collections</h2>
+
+        @foreach(var userCollection in Model.UserCollections)
+        {
+            // rendeer collections
+        }
+        <div class="collections-container">
+            <div class="game-collection-item user-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Favorites</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+
+            <div class="game-collection-item user-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Uwuwu</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+
+            <div class="game-collection-item user-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Running down to Cuba</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+
+            <div class="game-collection-item user-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Batman</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+
+            <div class="game-collection-item user-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Superb</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+
+            <div class="game-collection-item user-collection-item">
+                <a href="#" class="game-collection-card user-collection-card">
+                    <img class="collection-preview" src="https://static.wikia.nocookie.net/the-antijimi/images/d/d6/Naked_Snake.png/revision/latest?cb=20200316155909" alt="Last game adde to collection" />
+                    <span class="collection-name">Oh as I was going</span>
+                </a>
+                <section class="game-collection-actions">
+                    <button type="button" class="btn-contrast btn-icon btn-remove-collection"><i class="fa-solid fa-trash"></i></button>
+                </section>
+            </div>
+        </div>
+    </section>
+</article>
