--- a/GegaGamez.WebUI/Pages/Login.cshtml
+++ b/GegaGamez.WebUI/Pages/Login.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
 @model GegaGamez.WebUI.Pages.LoginModel
 @{
+    ViewData ["login"] = true;
+
 }
 
 <div class="page-content-header border-primary ">
