--- a/GegaGamez.WebUI/Pages/Register.cshtml
+++ b/GegaGamez.WebUI/Pages/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model GegaGamez.WebUI.Pages.RegisterModel
 @{
+    ViewData ["register"] = true;
 }
 
 <div class="page-content-header border-primary ">
