--- a/GegaGamez.WebUI/Pages/Developers/Search.cshtml
+++ b/GegaGamez.WebUI/Pages/Developers/Search.cshtml
@@ -1,4 +1,60 @@
 ﻿@page
 @model GegaGamez.WebUI.Pages.Developers.SearchModel
 @{
+    ViewData ["developers"] = true;
 }
+
+<form id="search-form" class="rounded border-contrast">
+    <input id="searchbox" asp-for="DevSearchName" class="font-primary borderless search-field" type="search" placeholder="Search for a developer" />
+    <button type="submit" class="search-button font-contrast borderless">
+        <i class="fa-solid fa-magnifying-glass"></i>
+    </button>
+</form>
+
+<section id="search-results">
+    <h2>Developers results:</h2>
+
+    @foreach (var dev in Model.Developers)
+    {
+        // render each dev
+
+        <article class="flex-container search-result game-item">
+            <a asp-page="/Developers/Index" asp-route-id="@dev.Id"> 
+                <img class="img-standard game-img hover-shadow" src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/MassEffect_Xbox.jpg/261px-MassEffect_Xbox.jpg" alt="Game image" />
+            </a>
+
+            <div class="text-info-block">
+                <h3 class="game-title-small">@dev.Name</h3>
+
+                <span class="game-description-small">
+                    Something about a developer
+                </span>
+            </div>
+        </article>
+        
+}
+    @*<article class="flex-container search-result game-item">
+        <img class="img-standard game-img hover-shadow" src="https://upload.wikimedia.org/wikipedia/ru/thumb/c/c5/MassEffect_Xbox.jpg/261px-MassEffect_Xbox.jpg" alt="Alternate Text" />
+
+        <div class="text-info-block">
+            <h3 class="game-title-small">Mass Effect</h3>
+
+            <span class="rating-small">
+                8/10
+            </span>
+
+            <span class="font-secondary">
+                2006, Developer
+            </span>
+
+            <!--<span class="font-secondary">-->
+            <!--<a>Developer</a>-->
+            <!--Developer
+            </span>-->
+
+            <span class="game-description-small">
+                A small description. This fight will be your last!
+            </span>
+        </div>
+    </article>*@
+</section>
